fixed the bugs for overflow in mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,7 @@ li:hover{
   width: 100px;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: auto;
+  overflow: hidden;
   vertical-align: middle;
   text-align: center;
   display: inline-block;
@@ -140,6 +140,12 @@ li:hover{
 }
 
 @media screen and (max-width: 576px){
+  body{
+    width:100%;
+    height:100%;
+    position: fixed
+  }
+
   navbar{
     position: fixed;
   }
